<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="#dddad4"
    android:orientation="vertical"
    tools:context=".ResultActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="20dp"
        android:textSize="40sp"
        android:fontFamily="@font/bangers1"
        android:textStyle="bold"
        android:text="@string/result"
        android:textColor="@color/colorPrimaryDark"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_trophy"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Congratulation"
            android:textSize="30sp"
            android:textStyle="bold"
            android:fontFamily="@font/bungee"
            android:textColor="@color/colorAccent"/>
        <TextView
            android:id="@+id/tv_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/Congratulation"
            android:fontFamily="serif"
            android:textSize="23sp"
            android:textColor="@color/colorAccent"/>
        <TextView
            android:id="@+id/tv_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:fontFamily="@font/antic1"
            android:text="@string/Congratulation"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"/>



        <Button
            android:id="@+id/btn_finish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/finish"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"/>


</LinearLayout>